force-app/main/default/objects/Branch__c/Branch__c.object-meta.xml
<CustomObject>
    <label>Branch</label>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>