force-app/main/default/objects/Branch__c/fields/Branch_Manager_License__c.field-meta.xml
<CustomField>
    <fullName>Branch_Manager_License__c</fullName>
    <formula>IF(  Branch_Manager__r.Approved_State_Licenses__c  &gt;= 1, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green Flag&quot;),&quot;&quot; )</formula>
    <label>Branch Manager License</label>
    <type>Text</type>
</CustomField>