force-app/main/default/objects/Branch__c/fields/Date_Submitted_to_State__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_to_State__c</fullName>
    <label>Date Submitted to State</label>
    <type>Date</type>
</CustomField>