force-app/main/default/objects/Branch__c/fields/Licensing_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Licensing Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>