force-app/main/default/objects/Branch__c/fields/NMLS_Branch_ID__c.field-meta.xml
<CustomField>
    <fullName>NMLS_Branch_ID__c</fullName>
    <label>NMLS Branch ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>