force-app/main/default/objects/Branch__c/fields/Regulator_Website__c.field-meta.xml
<CustomField>
    <fullName>Regulator_Website__c</fullName>
    <formula>State__r.Website</formula>
    <label>Regulator Website</label>
    <type>Text</type>
</CustomField>