force-app/main/default/objects/Branch__c/fields/Rocket_Pro_Partner__c.field-meta.xml
<CustomField>
    <fullName>Rocket_Pro_Partner__c</fullName>
    <formula>TEXT(Branch_Manager__r.Rocket_Pro_Partner__c)</formula>
    <label>Rocket Pro Partner</label>
    <type>Text</type>
</CustomField>