force-app/main/default/objects/Branch__c/fields/RP_Partner__c.field-meta.xml
<CustomField>
    <fullName>RP_Partner__c</fullName>
    <label>RP Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State Farm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>